RESOLVED FIXED141836
[WK2][EFL] Fix the build after r180362
https://bugs.webkit.org/show_bug.cgi?id=141836
Summary [WK2][EFL] Fix the build after r180362
Gyuyoung Kim
Reported 2015-02-20 03:23:30 PST
r180409 fixed GTK port though, EFL port is still broken.
Attachments
WIP (5.10 KB, patch)
2015-02-20 03:34 PST, Gyuyoung Kim
no flags
WIP (4.04 KB, patch)
2015-02-20 03:50 PST, Gyuyoung Kim
no flags
Patch (5.57 KB, patch)
2015-02-20 05:00 PST, Gyuyoung Kim
no flags
Patch (5.59 KB, patch)
2015-02-20 05:23 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2015-02-20 03:34:53 PST
Gyuyoung Kim
Comment 2 2015-02-20 03:50:28 PST
Gyuyoung Kim
Comment 3 2015-02-20 05:00:24 PST
Carlos Garcia Campos
Comment 4 2015-02-20 05:03:04 PST
Comment on attachment 246963 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246963&action=review > Source/WebKit2/UIProcess/API/C/efl/WKAPICastEfl.h:115 > +inline WKPopupMenuListenerRef toAPI(WebPopupMenuListenerEfl* popup) > +{ > + return static_cast<WKPopupMenuListenerRef>(static_cast<void*>(popup)); > +} > + > +inline WebPopupMenuListenerEfl* toImpl(WKPopupMenuListenerRef popupRef) > +{ > + return static_cast<WebPopupMenuListenerEfl*>(static_cast<void*>(const_cast<OpaqueWKPopupMenuListener*>(popupRef))); > +} I wonder why you need this, isn't WebPopupMenuListenerEfl an API::Object?
Gyuyoung Kim
Comment 5 2015-02-20 05:08:11 PST
Comment on attachment 246963 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246963&action=review >> Source/WebKit2/UIProcess/API/C/efl/WKAPICastEfl.h:115 >> +} > > I wonder why you need this, isn't WebPopupMenuListenerEfl an API::Object? Yes, it is not API::Object yet. http://trac.webkit.org/browser/trunk/Source/WebKit2/UIProcess/efl/WebPopupMenuListenerEfl.h#L33
Carlos Garcia Campos
Comment 6 2015-02-20 05:11:18 PST
(In reply to comment #5) > Comment on attachment 246963 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=246963&action=review > > >> Source/WebKit2/UIProcess/API/C/efl/WKAPICastEfl.h:115 > >> +} > > > > I wonder why you need this, isn't WebPopupMenuListenerEfl an API::Object? > > Yes, it is not API::Object yet. > > http://trac.webkit.org/browser/trunk/Source/WebKit2/UIProcess/efl/ > WebPopupMenuListenerEfl.h#L33 Ok, then I guess you should add template specialization, like Zan suggested in the GTK+ patch
Gyuyoung Kim
Comment 7 2015-02-20 05:23:18 PST
Gyuyoung Kim
Comment 8 2015-02-20 06:29:05 PST
Comment on attachment 246966 [details] Patch Clearing flags on attachment: 246966 Committed r180411: <http://trac.webkit.org/changeset/180411>
Gyuyoung Kim
Comment 9 2015-02-20 06:29:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.